--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -6289,7 +6289,7 @@
  	},
  	"error": {
  	 	"10_aborted": {
- 	 	 	"trans": "Riscontrato un errore lato server, se si vede questo messaggio, attendere 2 minuti prima di fare qualsiasi altra azione per assicurarsi che non continui a accadere.",
+ 	 	 	"trans": "Riscontrato un errore lato server, se vedi questo messaggio, attendi 2 minuti prima di fare qualsiasi altra azione per assicurarti che non continui a accadere.",
  	 	 	"eng": "Encountered an server side error, if you see this message, please wait for 2 minutes before making any other action to ensure it will not keep happening."
  	 	}
  	},
@@ -6324,7 +6324,7 @@
  	 	 	"vars": [
  	 	 	 	"enemy"
  	 	 	],
- 	 	 	"trans": "Il livello medio dell'attrezzatura è troppo alto per ricevere la ricompensa da ${enemy}",
+ 	 	 	"trans": "Il livello medio del tuo equipaggiamento è troppo alto per poter ricevere il bottino da ${enemy}",
  	 	 	"eng": "Your average equipment level is too high to receive reward from ${enemy}"
  	 	}
  	},
@@ -6502,7 +6502,7 @@
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	},
  	 	"cleared": {
- 	 	 	"trans": "Dungeon è stato cancellato!",
+ 	 	 	"trans": "Dungeon completato!",
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
@@ -6545,7 +6545,7 @@
  	 	 	 	 	"maxStackSize",
  	 	 	 	 	"newAmount"
  	 	 	 	],
- 	 	 	 	"trans": "Supera l'importo massimo dell'oggetto, ${itemName} ha una dimensione massima dello stack di ${maxStackSize}, ma stai cercando di adattarsi a ${newAmount}",
+ 	 	 	 	"trans": "Superata la quantità massima trasportabile dell'oggtto, ${itemName} ha una dimensione massima dello stack di ${maxStackSize}, ma stai cercando di trasportarne ${newAmount}",
  	 	 	 	"eng": "Exceed item max amount, ${itemName} has max stack size of ${maxStackSize}, but you are trying to fit in ${newAmount}"
  	 	 	},
  	 	 	"full": {
@@ -6553,7 +6553,7 @@
  	 	 	 	 	"neededAmount",
  	 	 	 	 	"size"
  	 	 	 	],
- 	 	 	 	"trans": "Spazio insufficiente nell'inventario, richiede slot ${neededAmount}, ma hai solo ${size}",
+ 	 	 	 	"trans": "Spazio insufficiente nell'inventario, richiede ${neededAmount} slot, ma ne hai solo ${size}",
  	 	 	 	"eng": "Insufficient space in inventory, requires ${neededAmount} slots, but you only have ${size}"
  	 	 	}
  	 	}
@@ -7469,14 +7469,14 @@
  	 	 	}
  	 	},
  	 	"notInGang": {
- 	 	 	"trans": "Non sei in una banda",
+ 	 	 	"trans": "Non sei in una gang",
  	 	 	"eng": "You are not in a gang"
  	 	},
  	 	"notTopGang": {
  	 	 	"vars": [
  	 	 	 	"topGangs"
  	 	 	],
- 	 	 	"trans": "Non sei in una banda di alto livello. Le migliori bande sono: ${topGangs}",
+ 	 	 	"trans": "Non sei in una delle migliori gang: ${topGangs}",
  	 	 	"eng": "You are not in a top gang. Top gangs are: ${topGangs}"
  	 	}
  	},
@@ -7701,11 +7701,11 @@
  	"player": {
  	 	"error": {
  	 	 	"deleteWhileMuted": {
- 	 	 	 	"trans": "Non puoi eliminare il tuo account quando sei disattivato.",
+ 	 	 	 	"trans": "Non puoi eliminare il tuo account poiché sei stato silenziato.",
  	 	 	 	"eng": "You can't delete your account when you are muted."
  	 	 	},
  	 	 	"deleteAccountTooEarly": {
- 	 	 	 	"trans": "Non puoi eliminare questo account ora, per favore aspetta qualche giorno",
+ 	 	 	 	"trans": "Non puoi eliminare il tuo account in questo momento, per favore aspetta qualche giorno",
  	 	 	 	"eng": "You can't delete this account now, please wait a few days"
  	 	 	},
  	 	 	"playerNotFound": {
@@ -7721,20 +7721,20 @@
  	 	 	 	"eng": "You can't perform this action now"
  	 	 	},
  	 	 	"invalidTravelLink": {
- 	 	 	 	"trans": "Link di viaggio non valido, se persistono ricaricare",
+ 	 	 	 	"trans": "Percorso di viaggio non valido, se persiste ricaricare il gioco",
  	 	 	 	"eng": "Invalid Travel Link, if persist please reload"
  	 	 	}
  	 	},
  	 	"escape": {
  	 	 	"success": {
- 	 	 	 	"trans": "Sei sfuggito con successo!",
+ 	 	 	 	"trans": "Sei riuscito a scappare!",
  	 	 	 	"eng": "You have successfully escaped!"
  	 	 	},
  	 	 	"failed": {
  	 	 	 	"vars": [
  	 	 	 	 	"chance"
  	 	 	 	],
- 	 	 	 	"trans": "Non sei riuscito a scappare, successo: ${chance}%",
+ 	 	 	 	"trans": "Non sei riuscito a scappare, probabilità di successo: ${chance}%",
  	 	 	 	"eng": "You failed to escape, success chance: ${chance}%"
  	 	 	}
  	 	},
@@ -7746,12 +7746,12 @@
  	 	 	"eng": "`You were killed by ${enemy}"
  	 	},
  	 	"levelTooHigh": {
- 	 	 	"trans": "Il tuo livello è troppo alto per eseguire questa azione qui, prova a farlo nella zona successiva.",
+ 	 	 	"trans": "Il tuo livello è troppo alto per eseguire questa azione, prova a farlo nella zona successiva.",
  	 	 	"eng": "Your level is too high to perform this action here, try to do it in the next zone."
  	 	},
  	 	"giveCred": {
  	 	 	"success": {
- 	 	 	 	"trans": "Hai dato un credito di strada quotidiano.",
+ 	 	 	 	"trans": "Hai dato la reputazione giornaliera.",
  	 	 	 	"eng": "You have given daily street cred."
  	 	 	},
  	 	 	"notEnoughLevelError": {
@@ -7759,26 +7759,26 @@
  	 	 	 	"eng": "You must be level 10 or above to give player street cred"
  	 	 	},
  	 	 	"cooldownError": {
- 	 	 	 	"trans": "Non puoi ancora dare credite di strada (una volta ogni giorno)",
+ 	 	 	 	"trans": "Non puoi ancora dare reputazione (una volta ogni giorno)",
  	 	 	 	"eng": "You cannot give street cred yet (once every day)"
  	 	 	}
  	 	}
  	},
  	"basicInfo": {
  	 	"nameUsed": {
- 	 	 	"trans": "Questo nome è usato da un altro giocatore, usa altro nome",
+ 	 	 	"trans": "Questo nome è usato da un altro giocatore, usane un altro",
  	 	 	"eng": "this name is used by other player, please use other name"
  	 	},
  	 	"nameIllegal": {
- 	 	 	"trans": "Nome illegale, usa altro nome",
+ 	 	 	"trans": "Nome vietato, usane un altro",
  	 	 	"eng": "Illegal name, please use other name"
  	 	},
  	 	"nameProfane": {
- 	 	 	"trans": "Questo nome contiene le parole non consentite, usa altro nome",
+ 	 	 	"trans": "Questo nome contiene parole non consentite, usane un altro",
  	 	 	"eng": "This name contains wordings not allowed, please use other name"
  	 	},
  	 	"nameInvalid": {
- 	 	 	"trans": "La lunghezza del nome deve essere maggiore di 4, meno o uguale a 16 e contiene solo caratteri inglesi, numeri o \\ '_ \\'",
+ 	 	 	"trans": "La lunghezza del nome deve essere tra 4 e 16 lettere e deve contenere solo lettere dell'alfabeto inglese, numeri o \\ '_ \\'",
  	 	 	"eng": "name length must be greater then 4, less then or equal to 16 and only contains English characters, numbers or \\'_\\'"
  	 	}
  	},
@@ -7788,7 +7788,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "Sembra che ci sia già uno stesso effetto di stato distribuito da altri giocatori. È possibile distribuire di nuovo in ${time} minuto.",
+ 	 	 	 	"trans": "Sembra che lo stesso effetto globale sia già stato attivato da altri giocatori. Potrai attivarlo nuovamente tra ${time} minuto/i.",
  	 	 	 	"eng": "Seems like there is a same status effect deployed by other player already. you may deploy again in ${time} minute."
  	 	 	}
  	 	}
