Fixes DE translations

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -723,7 +723,7 @@
  	 	 	 	"eng": "You cannot unlock containers right now"
  	 	 	},
  	 	 	"openRedEnvelop": {
- 	 	 	 	"trans": "Offen",
+ 	 	 	 	"trans": "Öffnen",
  	 	 	 	"eng": "Open"
  	 	 	},
  	 	 	"cannotOpenRedEnvelopNotIdle": {
@@ -1054,7 +1054,7 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Eben",
+ 	 	 	 	 	"trans": "Level",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
@@ -6281,7 +6281,7 @@
  	 	 	}
  	 	},
  	 	"shareDungeon": {
- 	 	 	"trans": "Aktie",
+ 	 	 	"trans": "Teilen",
  	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
