improves DE translations

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -3335,7 +3335,7 @@
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
- 	 	 	 	"trans": "Steigern Sie jetzt",
+ 	 	 	 	"trans": "Jetzt steigern",
  	 	 	 	"eng": "Boost now"
  	 	 	},
  	 	 	"enableBoost": {
@@ -3345,7 +3345,7 @@
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Anfang",
+ 	 	 	 	"trans": "Start",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
@@ -7288,7 +7288,7 @@
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Anfang",
+ 	 	 	 	"trans": "Start",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
