even better translation for a button

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -3345,7 +3345,7 @@
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Start",
+ 	 	 	 	"trans": "Starten",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
@@ -7288,7 +7288,7 @@
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Start",
+ 	 	 	 	"trans": "Starten",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
