--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -60,7 +60,7 @@
  	 	 	},
  	 	 	"updateImage": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "更新公會圖像",
+ 	 	 	 	 	"trans": "更新公會圖片",
  	 	 	 	 	"eng": "Update Gang Image"
  	 	 	 	}
  	 	 	},
@@ -120,7 +120,7 @@
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "此內容由玩家所提供。 點擊此處貢獻您自己的內容。",
+ 	 	 	 	"trans": "此內容由玩家所提供。 點擊此處貢獻您的內容。",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -151,7 +151,7 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "點擊以下顏色",
+ 	 	 	 	 	"trans": "點擊下列顏色",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "烏克蘭，俄羅斯和整個世界的人們都在受苦，只因為一個人的野心。\r\n用愛聊天，不要戰爭。",
+ 	 	 	 	"trans": "因為一個人的野心，烏克蘭、俄羅斯和整個世界的人們都在受苦。\r\n用愛聊天，不要戰爭。",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -204,7 +204,7 @@
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "將物品放入你的保險箱中",
+ 	 	 	 	"trans": "將物品放入您的保險箱中",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVault": {
@@ -212,7 +212,7 @@
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "從你的保險箱中領出物品",
+ 	 	 	 	"trans": "從您的保險箱中領出物品",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -226,24 +226,24 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "增加你可以儲存在保險箱中的最大物品到${upgradeToSlot}",
+ 	 	 	 	"trans": "增加您保險箱的容量到${upgradeToSlot}格",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "你想把多少個物品存進保險箱？",
+ 	 	 	 	 	"trans": "您想把多少物品存進保險箱？",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "你想從保險箱提取多少個物品？",
+ 	 	 	 	 	"trans": "您想從保險箱領出多少物品？",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "你想存入多少錢？",
+ 	 	 	 	 	"trans": "您想存入多少錢？",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "你想領出多少錢？",
+ 	 	 	 	 	"trans": "您想領出多少錢？",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	}
  	 	 	},
@@ -258,7 +258,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "餘額不足，無法進行提款。",
+ 	 	 	 	"trans": "餘額不足，無法提款。",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -286,7 +286,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "你找到了一個上鎖的舊保險箱，上面似乎有一張寫有文字的便利貼。",
+ 	 	 	 	"trans": "您找到了一個上鎖的舊保險箱，上面的便利貼好像寫了些什麼。",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -308,14 +308,14 @@
  	 	 	 	"eng": "Reestablishing connection"
  	 	 	},
  	 	 	"notAtBottom": {
- 	 	 	 	"trans": "你正在看舊訊息",
+ 	 	 	 	"trans": "您正在看舊訊息",
  	 	 	 	"eng": "You are looking at old messages"
  	 	 	},
  	 	 	"replyTo": {
  	 	 	 	"vars": [
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "回復${playerName}",
+ 	 	 	 	"trans": "回覆${playerName}",
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	},
  	 	 	"linksNotAllowed": {
@@ -323,22 +323,22 @@
  	 	 	 	"eng": "Links are not allowed"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "請不要發送毫無意義的訊息，垃圾訊息將被禁言。",
+ 	 	 	 	"trans": "請不要發送無意義的訊息，垃圾訊息將被禁言。",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
- 	 	 	 	"trans": "請不要重複發送相同的訊息，垃圾訊息將被禁言。",
+ 	 	 	 	"trans": "請不要重複發送相同的訊息，濫發訊息將被禁言。",
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "請不要發送太短的訊息，試試更長的句子吧。",
+ 	 	 	 	"trans": "訊息長度過短，試試更長的句子吧。",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"underlevelChatBlock": {
  	 	 	 	"vars": [
  	 	 	 	 	"minLevel"
  	 	 	 	],
- 	 	 	 	"trans": "你至少需要達到等級${minLevel}才能發送聊天訊息",
+ 	 	 	 	"trans": "您至少需要達到等級${minLevel}才能發送聊天訊息",
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
@@ -377,7 +377,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${name}即將在幾秒鐘內結束！",
+ 	 	 	 	 	"trans": "${name}將在幾秒鐘內結束！",
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
@@ -395,7 +395,7 @@
  	 	"clanPage": {
  	 	 	"createClan": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "你不是任何公會的成員",
+ 	 	 	 	 	"trans": "您不是任何公會的成員",
  	 	 	 	 	"eng": "You are not a member of any gang"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -455,15 +455,15 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "透過列印更多快取記憶體來增加你的分子列印級別，打造更強大的武器",
+ 	 	 	 	"trans": "透過列印快取記憶體來增加您的分子列印等級，以打造更強大的武器",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "或通過自動列印和販賣您在黑市中的快取記憶體",
+ 	 	 	 	"trans": "或透過自動列印和在黑市中販賣您的快取記憶體",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
- 	 	 	 	"trans": "快捷欄",
+ 	 	 	 	"trans": "快捷欄位",
  	 	 	 	"eng": "Quick Slots"
  	 	 	},
  	 	 	"equipped": {
@@ -474,13 +474,13 @@
  	 	"quickSlot": {
  	 	 	"unbindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "解除綁定快捷欄？",
+ 	 	 	 	 	"trans": "解除綁定快捷欄位？",
  	 	 	 	 	"eng": "Unbind quick slot?"
  	 	 	 	}
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "選擇可用物品以綁定到快捷欄",
+ 	 	 	 	 	"trans": "選擇可用物品以綁定到快捷欄位",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
