added translation of the rules, fixed minor errors in the translation of the game interface

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -174,8 +174,8 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Люди Украины, России и всего мира страдают из-за амбиций одного человека. \\n Занимайтесь любовью, а не войной.",
- 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
+ 	 	 	 	"trans": "Люди Украины, России и всего мира страдают из-за амбиций одного человека. \r\n Занимайтесь любовью, а не войной.",
+ 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\r\n Make love exploit, not war."
  	 	 	}
  	 	},
  	 	"bank": {
@@ -402,8 +402,8 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Чат банды будет доступен, когда вы вступите в банду.\\nВступите в банду, заводя друзей в глобальном чате или создайте свою собственную банду и пригласите туда своих друзей!",
- 	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
+ 	 	 	 	 	"trans": "Чат банды будет доступен, когда вы вступите в банду.\r\nВступите в банду, заводя друзей в глобальном чате или создайте свою собственную банду и пригласите туда своих друзей!",
+ 	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\r\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
  	 	 	 	 	"trans": "Создать банду",
@@ -3271,7 +3271,7 @@
  	 	 	"eng": "You have logged in on another device"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Если вы хотите продолжать играть на этом устройстве, нажмите «Воспитание».",
+ 	 	 	"trans": "Если вы хотите продолжать играть на этом устройстве, нажмите «Переподключиться».",
  	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
  	 	},
  	 	"restartApp": {
@@ -5015,8 +5015,8 @@
  	 	 	 	 	"time",
  	 	 	 	 	"costMult"
  	 	 	 	],
- 	 	 	 	"trans": "В то время как Shard активен, все игроки могут запустить определенные задачи AFK в режиме Boost Mode™, получая ${rewardMult}x вознаграждение, одновременно увеличивая стоимость и продолжительность на ${costMult}x. \\n * Этот элемент все еще является бета-версией и подлежит изменению баланса, используйте сразу после покупки *",
- 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
+ 	 	 	 	"trans": "В то время как Shard активен, все игроки могут запустить определенные задачи AFK в режиме Boost Mode™, получая ${rewardMult}x вознаграждение, одновременно увеличивая стоимость и продолжительность на ${costMult}x. \r\n * Этот элемент все еще является бета-версией и подлежит изменению баланса, используйте сразу после покупки *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \r\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"newYear": {
@@ -5048,8 +5048,8 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Эти пельмени не похожи ни на какие другие. Сделанные с любовью и заботой Йен, эти восхитительные \"карманы добра\" наполнены лучшими ингредиентами и приготовлены до совершенства.\\n Восстанавливают здоровье на ${percent}% при употреблении",
- 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	 	"trans": "Эти пельмени не похожи ни на какие другие. Сделанные с любовью и заботой Йен, эти восхитительные \"карманы добра\" наполнены лучшими ингредиентами и приготовлены до совершенства.\r\n Восстанавливают здоровье на ${percent}% при употреблении",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\r\n recover ${percent}% health upon consumption"
  	 	 	}
  	 	},
  	 	"riceCake": {
@@ -5061,8 +5061,8 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Липкий и сладкий рисовый пирог — это традиционная еда Лунного Нового года, которая, как считается, приносит удачу и процветание.\\n восстанавливает щит на ${percent}% при употреблениии",
- 	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
+ 	 	 	 	"trans": "Липкий и сладкий рисовый пирог — это традиционная еда Лунного Нового года, которая, как считается, приносит удачу и процветание.\r\n восстанавливает щит на ${percent}% при употреблениии",
+ 	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\r\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
  	 	"sushi": {
@@ -5569,7 +5569,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Угольный магазин Йен",
+ 	 	 	 	"trans": "Угловой магазин Йен",
  	 	 	 	"eng": "Yen's Corner Store"
  	 	 	},
  	 	 	"npcName": {
@@ -7189,8 +7189,8 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Жалоба будет отправлена модераторам автоматически. \\nПожалуйста, не делайте репорты по ошибке, не спамьте и не играйте с системой репортов",
- 	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
+ 	 	 	"trans": "Жалоба будет отправлена модераторам автоматически. \r\nПожалуйста, не делайте репорты по ошибке, не спамьте и не играйте с системой репортов",
+ 	 	 	"eng": "Report will be sent to moderators automatically. \r\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
  	 	 	"title": {
@@ -7340,8 +7340,8 @@
  	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Этот заголовок никогда не истечет. \\nОн останется с вашей учетной записью навсегда.",
- 	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
+ 	 	 	"trans": "Этот заголовок никогда не истечет. \r\nОн останется с вашей учетной записью навсегда.",
+ 	 	 	"eng": "This title will never expire.\r\nIt stays with your account forever."
  	 	}
  	},
  	"cosmetic": {
