--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -2060,7 +2060,7 @@
  	 	 	 	"eng": "Links"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "您可以在這裡加入我們社交媒體，來與驚人的社區建立聯繫！",
+ 	 	 	 	"trans": "透過以下連結和我們一起體驗令人驚豔的CCO社群吧！",
  	 	 	 	"eng": "Here you can find all our social media links, come and connect with the amazing community!"
  	 	 	},
  	 	 	"reportBug": {
@@ -5452,7 +5452,7 @@
  	 	"printer": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"我會列印出任何您想要的東西 ── 只要您有那個東西的快取記憶體！",
+ 	 	 	 	 	"我會列印出任何您想要的東西 ── 只要您有對應的快取記憶體！",
  	 	 	 	 	"給我快取記憶體，我就給您成品！",
  	 	 	 	 	"請告訴我，您帶了一些史詩級的快取記憶體。",
  	 	 	 	 	"歡迎。我希望您是真的來消費的顧客...",
