--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -188,7 +188,7 @@
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "將比特幣存進銀行",
+ 	 	 	 	"trans": "將比特幣存入銀行",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
@@ -231,7 +231,7 @@
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "您想把多少物品存進保險箱？",
+ 	 	 	 	 	"trans": "您想把多少物品存入保險箱？",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
