--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -204,7 +204,7 @@
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "將物品放入您的保險箱中",
+ 	 	 	 	"trans": "將物品存入您的保險箱中",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVault": {
@@ -3075,7 +3075,7 @@
  	 	 	"vars": [
  	 	 	 	"item"
  	 	 	],
- 	 	 	"trans": "您的背包中沒有足夠的空間放入${item}",
+ 	 	 	"trans": "您的背包中沒有足夠的空間存入${item}",
  	 	 	"eng": "There is no enough space in your inventory for ${item}"
  	 	},
  	 	"takeAll": {
@@ -6536,7 +6536,7 @@
  	 	 	 	 	"maxStackSize",
  	 	 	 	 	"newAmount"
  	 	 	 	],
- 	 	 	 	"trans": "超過項目最大數量，${itemName}的最大數量為${maxStackSize}，但是您試圖放入${newAmount}",
+ 	 	 	 	"trans": "超過項目最大數量，${itemName}的最大數量為${maxStackSize}，但是您試圖存入${newAmount}",
  	 	 	 	"eng": "Exceed item max amount, ${itemName} has max stack size of ${maxStackSize}, but you are trying to fit in ${newAmount}"
  	 	 	},
  	 	 	"full": {
