--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -2962,7 +2962,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"diff"
  	 	 	 	],
- 	 	 	 	"trans": "不准確的設備時間（時間差：${diff}）。 為了確保諸如buff之類的遊戲功能，時間跳過和AFK任務正確顯示。 請將設備時間與網絡同步，並確保正確設置您的時區",
+ 	 	 	 	"trans": "設備時間不準確（時間差：${diff}）。 為了確保buff、時間跳過和AFK任務等等的遊戲功能正確顯示。 請將設備時間與網絡同步，並設定正確的時區",
  	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	},
@@ -4727,7 +4727,7 @@
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"descriptionv2": {
- 	 	 	 	"trans": "包含MISC項目和資源，使幫派保持功能。 \r\n         可以在您的幫派總部使用",
+ 	 	 	 	"trans": "包含MISC項目和資源，使公會保持功能。 \r\n         可以在您的公會總部使用",
  	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
@@ -6352,7 +6352,7 @@
  	},
  	"incorrectTimeModal": {
  	 	"title": {
- 	 	 	"trans": "設備時間不正確",
+ 	 	 	"trans": "設備時間不準確",
  	 	 	"eng": "Inaccurate Device Time"
  	 	},
  	 	"confirm": {
@@ -6393,7 +6393,7 @@
  	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
  	 	},
  	 	"shareDungeonCooldown": {
- 	 	 	"trans": "請稍等以發送另一個邀請",
+ 	 	 	"trans": "請不要連續發送邀請！",
  	 	 	"eng": "Please wait before sending another invite"
  	 	},
  	 	"normal": {
@@ -6468,11 +6468,11 @@
  	 	},
  	 	"shareDungeonModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "分享地城到聊天室？",
+ 	 	 	 	"trans": "分享地下城到聊天室？",
  	 	 	 	"eng": "Share Dungeon to chat?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "您可以分享當前的城到至聊天室。",
+ 	 	 	 	"trans": "您可以分享當前的地下城到至聊天室。",
  	 	 	 	"eng": "You can share your current dungeon to chat."
  	 	 	},
  	 	 	"cancel": {
@@ -6507,7 +6507,7 @@
  	 	 	},
  	 	 	"autoScrap": {
  	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "沒有物品可以自動回收",
+ 	 	 	 	 	"trans": "沒有可以自動回收的物品",
  	 	 	 	 	"eng": "No item to auto scrap"
  	 	 	 	}
  	 	 	}
@@ -6544,7 +6544,7 @@
  	 	 	 	 	"neededAmount",
  	 	 	 	 	"size"
  	 	 	 	],
- 	 	 	 	"trans": "包包空間不足，需要${neededAmount}空位，但是您只有${size}",
+ 	 	 	 	"trans": "背包空間不足，需要${neededAmount}空位，但是您只有${size}",
  	 	 	 	"eng": "Insufficient space in inventory, requires ${neededAmount} slots, but you only have ${size}"
  	 	 	}
  	 	}
@@ -6695,7 +6695,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"total"
  	 	 	 	],
- 	 	 	 	"trans": "它將花費共計${total}比特幣",
+ 	 	 	 	"trans": "共計將花費${total}比特幣",
  	 	 	 	"eng": "it will cost ${total} Bitcoin total"
  	 	 	}
  	 	},
@@ -6718,14 +6718,14 @@
  	 	 	 	"priceStr",
  	 	 	 	"itemName"
  	 	 	],
- 	 	 	"trans": "您以每件商品的價格為${priceStr}的價格販賣${amountStr} ${itemName}",
+ 	 	 	"trans": "您以每件${priceStr}的商品價格販賣${amountStr} ${itemName}",
  	 	 	"eng": "You are selling ${amountStr} ${itemName}(s), at the price of ${priceStr} Per Item"
  	 	},
  	 	"totalConfirm": {
  	 	 	"vars": [
  	 	 	 	"total"
  	 	 	],
- 	 	 	"trans": "如果所有物品都被售出，您將獲得${total}比特幣",
+ 	 	 	"trans": "所有物品售出後，您將獲得${total}比特幣",
  	 	 	"eng": "If all items are sold, you will earn ${total} BitCoins"
  	 	},
  	 	"sellAmountModalTitle": {
@@ -6748,13 +6748,13 @@
  	 	 	 	"slot",
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "您可以通過支付${price}Bitcoin來將您的市場插槽增加到${slot}",
+ 	 	 	"trans": "您可以通過支付${price}Bitcoin來將您的市場插槽增加到${slot}格",
  	 	 	"eng": "You can increase your market slot to ${slot} by paying ${price} BitCoins"
  	 	}
  	},
  	"mobile": {
  	 	"returnToAppMessage": {
- 	 	 	"trans": "與伺服器同步中..",
+ 	 	 	"trans": "伺服器同步中..",
  	 	 	"eng": "Syncing with server.."
  	 	}
  	},
@@ -6824,7 +6824,7 @@
  	},
  	"shop": {
  	 	"noEnoughSpace": {
- 	 	 	"trans": "您的背包中沒有空間購買此物品",
+ 	 	 	"trans": "您的背包沒有足夠的空間購買此物品",
  	 	 	"eng": "You have no space in your inventory to purchase this item"
  	 	},
  	 	"noEnoughExchangeItem": {
@@ -6851,7 +6851,7 @@
  	 	 	 	 	"amount",
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "購買${itemName}的${amount}",
+ 	 	 	 	"trans": "購買${amount}個${itemName}",
  	 	 	 	"eng": "Buying ${amount} of ${itemName}"
  	 	 	},
  	 	 	"priceDisplay": {
@@ -7010,11 +7010,11 @@
  	 	 	 	"eng": "Unofficial translation"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "由於這款遊戲僅由一個人製作，因此正確翻譯所有語言是非常困難的，但我正在努力添加更多翻譯 :)",
+ 	 	 	 	"trans": "由於這款遊戲是單人開發，因此正確翻譯所有語言是非常困難的，但我正在努力添加更多翻譯 :)",
  	 	 	 	"eng": "As this game is made by only one person, it's very difficult translate all languages correctly, but I am working on adding more translations :)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "您可以在設定頁面上隨時更改語言",
+ 	 	 	 	"trans": "您可以隨時在設定頁面裡更改語言",
  	 	 	 	"eng": "You can change language anytime at the settings page"
  	 	 	},
  	 	 	"dontShowAgain": {
@@ -7314,7 +7314,7 @@
  	 	 	"eng": "Happy Lunar New year!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "農曆新年要到了，我們正在香格里拉舉行特別活動。 加入我們，讓我們用傳統，喜悅和團結迎接新的一年開始。",
+ 	 	 	"trans": "農曆新年要到了，我們正在香格里拉舉行特別活動。 加入我們，讓我們用傳統，喜悅和團結迎接新的一年。",
  	 	 	"eng": "The lunar new year is here, and we're celebrating in Shang-ri-la with a special event. Join us as we embrace the start of a new year, filled with traditions, joy, and togetherness."
  	 	},
  	 	"desc2": {
@@ -7460,14 +7460,14 @@
  	 	 	}
  	 	},
  	 	"notInGang": {
- 	 	 	"trans": "您不在幫派",
+ 	 	 	"trans": "您不在公會",
  	 	 	"eng": "You are not in a gang"
  	 	},
  	 	"notTopGang": {
  	 	 	"vars": [
  	 	 	 	"topGangs"
  	 	 	],
- 	 	 	"trans": "您不在頂級幫派中。 頂級幫派是：${topGangs}",
+ 	 	 	"trans": "您不在頂級公會中。 頂級公會是：${topGangs}",
  	 	 	"eng": "You are not in a top gang. Top gangs are: ${topGangs}"
  	 	}
  	},
